compiling_error.txt
/home/kingshawn/Documents/Final-Project/Store.cpp: In member function ‘void Store::calculate_total() const’:
/home/kingshawn/Documents/Final-Project/Store.cpp:62:3: error: expected initializer before ‘nodePtr’
   nodePtr = head;
   ^~~~~~~
/home/kingshawn/Documents/Final-Project/Store.cpp:65:45: error: assignment of member ‘Store::total’ in read-only object
     total = (nodePtr->price * nodePtr->count);
                                             ^
/home/kingshawn/Documents/Final-Project/Store.cpp:67:10: error: return-statement with a value, in function returning 'void' [-fpermissive]
   return total;
          ^~~~~
